Project tutorial completed: Dependency Injection using Kodein Library

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item name="textView_quotes" type="id">textView_quotes</item>
+    <item name="textView_quotes" type="id"></item>
 </resources>
